[metadata]
name = django-oneevent
version = 0.3.1
description = A Django app to manage registration to events.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gchazot/OneEvent
author = Germain CHAZOT
author_email = g.chazot@gmail.com
license = License :: OSI Approved :: MIT License
license_file = LICENSE
classifiers =
    Development Status :: 6 - Mature
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = ~=2.7
install_requires =
    django-crispy-forms~=1.8.0
    icalendar~=4.0
