[metadata]
name = django-oneevent
version = 1.0.0alpha2
description = A Django app to manage registration to events.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gchazot/OneEvent
author = Germain CHAZOT
author_email = g.chazot@gmail.com
license = License :: OSI Approved :: MIT License
license_file = LICENSE
classifiers =
    Development Status :: 6 - Mature
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = ~=3.6
install_requires =
    django-crispy-forms~=1.8
    icalendar~=4.0

[options.extras_require]
test =
    Django~=3.0.0
    django-debug-toolbar
    django-extensions
